tests/cli/component-wit-resolve-error.wit.stderr
error: feature gate cannot reference unreleased version 0.1.1 of package [test:invalid@0.1.0] (current version 0.1.0)
     --> tests/cli/component-wit-resolve-error.wit:9:3
      |
    9 |   b: func(s: string) -> string;
      |   ^
